# joker-bot

./: .env.example  .gitignore  Dockerfile.bot  Dockerfile.web  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish-dev.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 0410da434d50_initial_schema.py  d74d33a13ff4_update_economy_models.py  daf239aee2dc_add_chat_message.py
joker_bot/bot/: api_client.py  main.py
joker_bot/bot/admin/client/: admin_client.py
joker_bot/bot/admin/plugin/: admin.py
joker_bot/bot/ai/client/: ai_client.py
joker_bot/bot/ai/plugin/: ai.py
joker_bot/bot/collect/client/: collect_client.py
joker_bot/bot/collect/plugin/: collect.py
joker_bot/bot/economy/client/: economy_client.py
joker_bot/bot/economy/plugin/: economy.py
joker_bot/bot/hook/: chat_history.py  has_role.py
joker_bot/web/api/: app.py  exception_handler.py
joker_bot/web/api/ai/router/: ai_router.py
joker_bot/web/api/chat_storage/dto/: message_dto.py
joker_bot/web/client/: gemini_client.py
joker_bot/web/db/: engine.py  session.py
joker_bot/web/models/: chat_message.py  transaction.py  user.py  user_stats.py
joker_bot/web/repository/: chat_message_repo.py  transaction_repo.py  user_repo.py  user_stats_repo.py
joker_bot/web/service/: ai_service.py  base_service.py  chat_storage_service.py  economy_service.py  user_service.py
tests/: conftest.py
tests/web/api/: test_chat_storage_api.py  test_economy_api.py  test_user_api.py
tests/web/repository/: test_user_stats_repo.py
(+8 files in other folders)
