[project]
name = "joker-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "testcontainers[postgresql]>=4.14.0",
]

[tool.setuptools]
packages = ["joker_bot"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
asyncio_mode = "strict"
